solved overflow x in ui in services component

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,7 +1,6 @@
 .container{
     background-image:url('../../assets/Hero-banners/Home_03.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     height: 100vh;
     width: 100vw;
 }
