--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -1,5 +1,7 @@
 .service_container{
     padding: 13vh 7vw;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .service_container h1{
@@ -24,7 +26,6 @@
     display: flex;
     flex-direction: column;
     gap: 1px;
-    /* width: 300px; */
 }
 
 .service li{
@@ -45,6 +46,7 @@
 
 .service_info{
     position: relative;
+    height: 450px;
 }
 
 .service_card{
@@ -55,6 +57,7 @@
     opacity: 0;
     transition: 0.3s;
 }
+
 
 .service_card img{
     margin-top: 1rem;
